# ad-generator

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
client/: package-lock.json  package.json
client/src/routes/: App.svelte
server/: README.md  pyproject.toml
server/src/: config.py  main.py
server/src/api/: dependency.py  router.py
server/src/api/v1/: ad_routers.py  imagen_router.py
server/src/config/: settings.py
server/src/core/: ad_generator.py  base.py  image_generator.py  llm.py  prompt_templates.py
server/src/core/processor/: image_processor.py
server/src/llm/: base.py  gemini_client.py  openai_client.py
server/src/models/: __init__.py  ad.py  requests.py  response.py
server/src/prompts/: imagen_prompt.py  templates.py
server/src/service/: ad_service.py  imagen_service.py
server/src/utils/: helpers.py
