[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]==0.116.1",
    "google-genai==1.27.0",
    "loguru==0.7.3",
    "openai==1.97.0",
    "pillow==11.3.0",
    "psutil>=7.0.0",
    "pydantic-settings==2.10.1",
    "python-dotenv>=1.1.1",
]
